Remove Desktop.ini etc

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,13 @@ tmp
 *.a
 mkmf.log
 *.tmp
+
+# Desktop INI (Windows)
+desktop.ini
+
+# Git BFG
 .git.bfg-report
+.git.bfg-report/2017-06-29/07-53-00
 
 # http://stackoverflow.com/questions/8865848/comments-in-gitignore
 # https://gist.github.com/danielpcox/4636520
