--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ tmp
 *.a
 mkmf.log
 *.tmp
+.rspec_status
 
 ##########################################################
 ##########################################################
