--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ tmp
 mkmf.log
 *.tmp
 .rspec_status
+/coverage/
 
 ##########################################################
 ##########################################################
